# comdirectpdfparser

./: API.rst  AUTHORS.rst  ComDirectPDFParser.log.2021-07-06  HISTORY.rst  LICENSE  README.rst  db.json  jlog.py  micc.json  pyproject.toml  testscript.py
comdirectpdfparser/: __init__.py  log.ini  log.py  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  tutorial.rst
tests/: __init__.py  test_comdirectpdfparser.py  test_jlog.py  test_log.py  test_utils.py
