[tool.poetry]
name = "comdirectpdfparser"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["first-name last-name <your.email@whatev.er>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/your-github-username/comdirectpdfparser"
homepage = "https://github.com/your-github-username/comdirectpdfparser"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
